--- a/0001-visualize-quote-insanity.html
+++ b/0001-visualize-quote-insanity.html
@@ -277,7 +277,7 @@
 <body>
     <div class="container">
         <div class="quote">
-            "Insanity is doing the same thing over and over again<br>and expecting different results"
+            "Insanity is doing the same thing over and over again<br>and expecting different results" - Albert Einstein 
         </div>
         
         <div class="scene">
