Evolution of Brains added

--- a/index.html
+++ b/index.html
@@ -125,12 +125,16 @@
                     <div class="content-title">Definition of Insanity</div>
                 </a>
             </li>
-            
             <li class="content-item">
                 <a href="0002-caring-leadership-quote.html" class="content-link">
                     <div class="content-title">Leadership Through Care</div>
                 </a>
             </li>
+            <li class="content-item">
+                <a href="0003-brain-evolution-timeline.html" class="content-link">
+                    <div class="content-title">Evolution of Brains</div>
+                </a>
+            </li>            
         </ul>
         
         <div class="footer">
